<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="crash_catcher">Crash Catcher</string>
    <string name="crash_message">I am sorry, the application has crashed! Can you send crash-report, please?</string>
    <string name="manual_report_message">You can send the report. Please make some description of reason for report.</string>
    <string name="preparing_report" translatable="false">Preparing crash-report&#8230;</string>
    
    <string name="crash_dialog_title">Crash</string>
    <string name="crash_dialog_message">Do you want to send the report about crash.</string>
    
    <string name="metadata_recipient_key" translatable="false">recipient_address</string>
    <string name="metadata_reporter_key" translatable="false">reporter</string>
    <string name="metadata_catch_server_url_key" translatable="false">catch_server_url</string>
    <string name="metadata_catch_server_api_key" translatable="false">catch_server_api</string>
    <string name="metadata_redmine_project" translatable="false">redmine_project</string>
    <string name="metadata_redmine_host" translatable="false">redmine_host</string>
    <string name="metadata_redmine_key" translatable="false">redmine_access_key</string>
    <string name="metadata_redmine_assignee_login" translatable="false">redmine_assignee_login</string>

    <string name="json_key_issue" translatable="false">issue</string>
    <string name="json_key_id" translatable="false">id</string>
    <string name="json_key_track_number" translatable="false">tracker_number</string>
    <string name="json_key_duplication" translatable="false">duplication</string>
    <string name="json_key_title" translatable="false">title</string>
    <string name="json_key_description" translatable="false">description</string>
    <string name="json_key_build" translatable="false">build</string>
    <string name="json_key_package" translatable="false">package</string>
    <string name="json_key_category" translatable="false">category</string>
    <string name="json_error_type_value_crash" translatable="false">crash</string>
    <string name="json_error_type_value_logic" translatable="false">logic</string>
    <string name="json_error_type_value_ui" translatable="false">ui</string>
    <string name="json_error_type_value_feedback" translatable="false">feedback</string>

    <string name="com_sibext_crashcatcher_status_unknown_error">Error. Report not sended</string>
    <string name="com_sibext_crashcatcher_status_net_error">Net error</string>
    <string name="com_sibext_crashcatcher_status">Your report was sent, thank you! Report id = %s</string>
    <string name="com_sibext_crashcatcher_status_server_unavailable">Server temporarily unavailable</string>
    <string name="com_sibext_crashcatcher_already_exist">Your report already exist, thank you anyway!</string>
    
    <string name="com_sibext_crashcatcher_message_hint">Could you write a couple of words about the crash? (Optional)</string>
    <string name="com_sibext_crashcatcher_manual_message_hint">Desription of problem (Optional)</string>
    <string name="com_sibext_crashcatcher_yes">Yes, sure!</string>
    <string name="com_sibext_crashcatcher_no">No, thanks</string>
    <string name="com_sibext_crashcatcher_exit">Close</string>
    <string name="com_sibext_crashcatcher_error">Can\'t send the report, could you check network connection?</string>
    <string name="com_sibext_crashcatcher_select_transfer">Send report via:</string>

    <string name="error_type">Error type</string>
    <string name="exit">Close</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Could you write a couple of words about the crash? (Optional)</string>
    <string name="button_no_text">No, thanks</string>
    <string name="button_yes_text">Yes, sure!</string>
    <string name="privacy">View privacy policy</string>
    <string name="detailed_information">Detailed information</string>
    <string name="requested_page">The requested page</string>
    <string name="choose_photo">Choose \nphoto</string>

    <string name="error_type_crash">Crash</string>
    <string name="error_type_logic_bug">Logic bug</string>
    <string name="error_type_ui_bug">UI bug</string>
    <string name="error_type_feedback">Feedback</string>


</resources>