<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_sibext_crashcatcher_alert" >

    <ImageView
        android:id="@+id/com_sibext_crashcatcher_crash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/crash_catcher"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <ProgressBar
        android:id="@+id/com_sibext_crashcatcher_crash_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_alignTop="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_marginRight="63dp"
        android:layout_marginTop="78dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/com_sibext_crashcatcher_crash_status"
        android:layout_width="195dp"
        android:layout_height="150dp"
        android:layout_alignBottom="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:fillViewport="true"
        android:textColor="@color/com_sibext_crashcatcher_green"
        android:textIsSelectable="true"
        android:textSize="22sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/com_sibext_crashcatcher_note"
        android:layout_width="195dp"
        android:layout_height="120dp"
        android:layout_alignBottom="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:alpha="0.75"
        android:gravity="top|left"
        android:hint="@string/com_sibext_crashcatcher_message_hint"
        android:visibility="visible" />

    <Button
        android:id="@+id/com_sibext_crashcatcher_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@id/com_sibext_crashcatcher_note"
        android:text="@string/com_sibext_crashcatcher_no"
        android:textColor="@android:color/white"
        android:background="@color/com_sibext_crashcatcher_red"
        android:textStyle="normal"/>

    <Button
        android:id="@+id/com_sibext_crashcatcher_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/com_sibext_crashcatcher_crash_logo"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@id/com_sibext_crashcatcher_note"
        android:text="@string/com_sibext_crashcatcher_yes"
        android:textColor="@android:color/white"
        android:background="@color/com_sibext_crashcatcher_green"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/com_sibext_crashcatcher_crash_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/com_sibext_crashcatcher_note"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:text="@string/crash_message"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp" />

</RelativeLayout>