<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_sibext_crashcatcher_dark_bg">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="@dimen/slider_header_closed_height"
        sothree:umanoShadowHeight="0dp"
        sothree:umanoClipPanel="false"
        sothree:umanoFadeColor="@android:color/transparent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_sibext_crashcatcher_orange"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crash_message"
                    android:textSize="@dimen/header_text_size"
                    android:paddingTop="@dimen/header_text_padding_top"
                    android:paddingBottom="@dimen/header_text_padding_bottom"
                    android:paddingRight="@dimen/header_text_padding_vertical"
                    android:paddingLeft="@dimen/header_text_padding_vertical"
                    android:gravity="center"
                    android:id="@+id/titleText"
                    android:textColor="@android:color/white"
                    android:background="@color/com_sibext_crashcatcher_orange"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_line_height"
                    android:background="@android:color/white"
                    android:layout_alignBottom="@+id/titleText"/>
            </RelativeLayout>



            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="@dimen/logo_padding"
                android:src="@drawable/main_screen_logo"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_blue"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/panel_horizontal_padding"
                android:layout_marginRight="@dimen/panel_horizontal_padding"
                android:layout_weight="0"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/error_type"
                    android:layout_weight="0"
                    android:textSize="@dimen/panel_text_size"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:layout_weight="0"
                    android:background="@drawable/rounded_rectangle_comment"
                    android:id="@+id/spinner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/comment"
                    android:layout_weight="0"
                    android:textSize="@dimen/panel_text_size"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_weight="0"
                    android:layout_height="@dimen/comments_height">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/comment_hint"
                        android:id="@+id/editTextComment"
                        android:background="@drawable/rounded_rectangle_comment"
                        android:padding="5dp"
                        android:minHeight="30dp"
                        android:gravity="top"
                        android:textColor="@color/com_sibext_crashcatcher_main_text_color"
                        android:textSize="@dimen/panel_text_size"/>
                    </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/privacy"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="5dp"
                android:textSize="@dimen/privacy_text_size"
                android:id="@+id/privacy"
                android:layout_weight="0"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginBottom="10dp">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/no_yes_button_size"
                    android:id="@+id/button_no"
                    android:background="@drawable/rounded_rectangle_button_no"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_no_text"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="@dimen/no_button_text_size"
                        android:textColor="@android:color/white"
                        android:background="@color/com_sibext_crashcatcher_gray_dark"/>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/no_yes_button_size"
                    android:id="@+id/button_yes"
                    android:background="@drawable/rounded_rectangle_button_yes"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/button_yes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/yes_button_text_size"
                        android:textColor="@android:color/white"
                        android:text="@string/button_yes_text"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:background="@color/com_sibext_crashcatcher_orange_dark"/>
                </LinearLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/slider_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">
            <include layout="@layout/slider_content"/>
        </LinearLayout>


    </com.sothree.slidinguppanel.SlidingUpPanelLayout>


</LinearLayout>